--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookstore-react",
+  "name": "bookstore",
   "author": "Atsighi Bright",
   "homepage": "http://brytebee.github.io/Bookstore-React",
   "version": "0.1.0",
